Finished with some bugs, mostly functional

--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <title>OreGONE Man</title>
+    <title>Graphic Design Is My Passion TM</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body onkeydown = "game_play()">
-    <h1>Oregon-Themed Word Guesser</h1>
-    <h4 id = "start">Press any key to start</h4>
+    <h1><img src = "assets/images/header.jpg"></h1>
+    <h4 id = "start"><img src = "assets/images/Key.jpg"></h4>
     <div >
-        <div>Word: </div> 
+        <div><img src = "assets/images/Word.jpg"></div> 
         <div id = "guess-word"></div>
     </div>
-    <div>Guesses Left: </div>
+    <div><img src = "assets/images/Left.jpg"></div>
     <div id = "guesses-left"></div>
-    <div>Guessed Letters: </div>
+    <div><img src = "assets/images/Guessed.jpg"></div>
     <div id = "guessed-letters"></div>
 
-    <div>Wins:</div>
+    <div><img src ="assets/images/Wins.jpg"></div>
     <div id = "wins"></div>
-    <div>Losses:</div>
+    <div><img src = "assets/images/Loss.jpg"></div>
     <div id = "losses"></div>
 
     <script src ="assets/javascript/game.js"></script>
